--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nextui-org/image": "^2.0.27",
     "@nextui-org/system": "^2.1.2",
     "@nextui-org/theme": "^2.2.3",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.1.7",
     "next": "14.2.2",
     "react": "^18",
